--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">Search</string>
+
+    <string name="select_country">Select Country</string>
     <string name="country">Country</string>
     <string name="media">Media</string>
-
+    <string name="no_connectivity_title">Network Unavailable</string>
+    <string name="no_connectivity_text">Network is currently unavailable.</string>
 </resources>
